@@ -1,2 +1,6 @@
+[B]1.0.2:[/B]
+- oprava chyb zobrazeni filmu v menu
+[B]1.0.1:[/B]
+- nová verze module.stream.resolver
 [B]1.0.0:[/B]
 Prvni verze
